--- a/_html/sass/pages/_article.scss
+++ b/_html/sass/pages/_article.scss
@@ -9,6 +9,7 @@
 // =========================
 
 .articles {
+  overflow: hidden;
 
   &.right {
     article {
@@ -124,7 +125,7 @@ article {
 
       span {
         background-color: $black;
-        position: absolute;
+        position: fixed;
         display: block;
         font-family: $CamphorBold;
         font-size: 0.625rem;
@@ -140,7 +141,8 @@ article {
         z-index: 3;
         text-align: center;
         text-transform: uppercase;
-        @include transition(all 0.3s $smoothTransition);
+        @include transform(translateY(6px));
+        @include transition(opacity 0.3s $smoothTransition, transform 0.3s $smoothTransition);
 
         &:after {
           content: ' ';
@@ -159,6 +161,7 @@ article {
         span {
           opacity: 1;
           visibility: visible;
+          @include transform(translateY(0));
         }
       }
     }
