--- a/_html/sass/pages/_home.scss
+++ b/_html/sass/pages/_home.scss
@@ -157,6 +157,8 @@
   padding: 80px 0;
 
   #articles-wrapper {
+    overflow: hidden;
+    
     @include transition(opacity 0.3s $smoothTransition, max-height 1s $smoothTransition);
 
     &.loading {
@@ -175,6 +177,7 @@
 
   .read-more {
     border: 1px solid #d9d9d9;
+    clear: both;
     color: #999;
     display: block;
     height: 55px;
@@ -212,7 +215,7 @@
 
       &.stick {
         position: fixed;
-        z-index: 10;
+        z-index: 4;
       }
 
       a {
